--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@google/genai": "^1.30.0",
     "clsx": "2.1.1",
     "tailwind-merge": "2.3.0",
-    "next": "^16.0.3"
+    "next": "^16.0.3",
+    "@tiptap/core": "2.2.4",
+    "@tiptap/react": "2.2.4",
+    "@tiptap/starter-kit": "2.2.4",
+    "@tiptap/extension-link": "2.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
